# ros_template

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: include.h
msg/: Message1.msg
scripts/: py_node.py
src/: main.cpp  other.cpp  ros_template_node.cpp
srv/: Service1.srv
